first merge of landing view; everything (splash image, stylesheets) added to pipeline and functioning live!

--- a/app/views/gamerpass/landing.html.erb
+++ b/app/views/gamerpass/landing.html.erb
@@ -1,5 +1,40 @@
-<h1>Welcome to Gamerpass!</h1>
-<p>Text about gamerpass</p>
-<form action="/gamerpass/signup">
-  <button type="submit" class="signup-btn">Signup Here</button>
-</form>
+<nav class="navigation" id="nav">
+  <div class="hamburger" id="hamburger">
+    <div class="hamburger--top top"></div>
+    <div class="hamburger--middle middle"></div>
+    <div class="hamburger--bottom bottom"></div>
+  </div><!-- HAMBURGER -->
+  <div class="navigation__content">
+    <a class="home" href="#top"><span>GP</span></a>
+    <ul class="nav-content">
+      <li><a href="#Contact" class="navigation__page-link" href="events.html">Contact</a></li>
+      <li><a href="#About" class="navigation__page-link" href="contact.html">About</a></li>
+    </ul>
+  </div><!-- NAVIGATION CONTENT -->
+</nav>
+
+<div id="top"></div>
+<div class="content__box">
+
+  <h1 class="UVP">All Your Tournaments in One Spot</h1>
+  <div class="example-screens__box">
+    <%= image_tag "example_screens.png", :class => "example-screen"%>
+  </div><!-- EXAMPLE SCREENS -->
+  <div class="selling-points__box">
+    <h2 class="selling-point">Key Detail about Gamer Pass</h2>
+    <h2 class="selling-point">Another Consideration</h2>
+    <h2 class="selling-point">Big Claim Reinforcing Unique Value Proposition</h2>
+  </div><!-- SELLING POINTS -->
+
+  <div class="signup__button">
+  </div><!-- SIGNUP BUTTON-->
+
+  <div class="content__main">
+    <script src="https://verbingnounssincewhen.com/p/8"></script>
+    <h2 id="About">About</h2>
+    <script src="https://verbingnounssincewhen.com/p/10"></script>
+    <h2 id="Contact">Contact</h2>
+    <script src="https://verbingnounssincewhen.com/p/3"></script>
+
+  </div><!-- CONTENT MAIN -->
+</div><!-- DUMMY BODY -->
