--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>GamerPass</title>
+    <title>Gamer Pass</title>
+
+  	<!--
+  		<link rel="stylesheet" type="text/css" href="styles/brand.css">
+  		<link rel="stylesheet" type="text/css" href="styles/layout.css">
+  		<link rel="stylesheet" type="text/css" href="styles/_hamburger.css">
+  		<link rel="stylesheet" type="text/css" href="styles/_nav.css">
+  		<link rel="stylesheet" type="text/css" href="styles/_signup.css">
+    -->
+
+  	<link href="https://fonts.googleapis.com/css?family=Muli:200,200i,400,400i,900,900i" rel="stylesheet">
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
