merges in deacons modal close button and background film with a few of my modal feature/style inserted as well

--- a/app/assets/stylesheets/brand.css
+++ b/app/assets/stylesheets/brand.css
@@ -1,7 +1,10 @@
 
+body {
+	padding-top: 0px;
+	padding-bottom: 150px;
+}
 
-
-* { 
+* {
 	font-family: 'Muli', 'Helvetica Neue', Helvetica, sans-serif;
 	/* available in 200, 200i, 400, 400i, 900, 900i; */
 }
