--- a/app/assets/stylesheets/_modal_form.css
+++ b/app/assets/stylesheets/_modal_form.css
@@ -4,7 +4,8 @@
   display: flex;
   align-items: flex-start;
   justify-content: center;
-  height: 100%;
+  height: 84%;
+  overflow-y: scroll;
   padding-top: 20px;
 }
 
@@ -23,7 +24,6 @@
 
 #modal__form input{
   min-width: 100%;
-  color: red;
   height: 50px;
   padding: 3px;
   padding-left: 6px;
