--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -7,7 +7,7 @@
 }
 
 .content__box {
-	margin: 100px 0 120px 0;
+	margin: 0px 0 120px 0;
 }
 
 .content__main {
@@ -37,3 +37,10 @@
 	font-weight: 200;
 }
 
+#top{
+	padding-top: 80px;
+}
+
+#About{
+	padding-top: 80px;
+}
