--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,13 +13,28 @@
 
   	<link href="https://fonts.googleapis.com/css?family=Muli:200,200i,400,400i,900,900i" rel="stylesheet">
     <%= csrf_meta_tags %>
-
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/css/select2.min.css" rel="stylesheet" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>
   </head>
 
   <body>
     <%= yield %>
     <%= javascript_include_tag "signup.js" %>
+    <script>
+      $(document).ready(function() {
+          $('.js-example-basic-multiple').select2({
+            placeholder: 'Select an option',
+            width: '95%',
+            multiple: true,
+            maximumSelectionLength: 5,
+            allowClear: true,
+            data: {
+
+            }
+          });
+      });
+      </script>
   </body>
 </html>
