--- a/app/assets/stylesheets/_modal_form.css
+++ b/app/assets/stylesheets/_modal_form.css
@@ -7,6 +7,7 @@
   height: 84%;
   overflow-y: scroll;
   padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 #modal__form{
@@ -16,6 +17,20 @@
   justify-content: flex-start;
   align-items: center;
   padding-top: 10px;
+  overflow-y: scroll;
+}
+
+#modal__form h4{
+  width: 100%;
+  text-align: center;
+  color: white;
+  font-size: 1.1em;
+}
+#modal__form h5{
+  width: 100%;
+  text-align: left;
+  color: white;
+  font-size: 1.1em;
 }
 
 #modal__form > label{
@@ -32,11 +47,51 @@
   font-size: 1.1em;
 }
 
+select{
+  overflow-y: scroll;
+}
+
 button.signup-btn-submit{
+  font-family: 'Muli', 'Helvetica Neue', Helvetica, sans-serif;
   width: 180px;
   height: 50px;
   border-radius: 5%;
+  font-size: 22px;
   background-color: white;
   color: black;
   margin-top: 30px;
+}
+
+.select2-results__option{
+  font-family: 'Muli', 'Helvetica Neue', Helvetica, sans-serif;
+  font-size: 12px;
+  width: 100%;
+  text-align: right;
+}
+.select2-selection__choice{
+  font-family: 'Muli', 'Helvetica Neue', Helvetica, sans-serif;
+  font-size: 12px;
+}
+li.select2-search.select2-search--inline{
+  width: 200px;
+}
+span.select2-container .select2-selection--multiple {
+    height: 70px;
+    overflow-y: scroll;
+    margin-left: 14px;
+}
+input.select2-search__field{
+  width: 200px;
+}
+input.select2-search__field::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+  font-size: 16px;
+}
+input.select2-search__field::-moz-placeholder { /* Firefox 19+ */
+  font-size: 16px;
+}
+input.select2-search__field:-ms-input-placeholder { /* IE 10+ */
+  font-size: 16px;
+}
+input.select2-search__field:-moz-placeholder { /* Firefox 18- */
+  font-size: 16px;
 }
