--- a/app/views/gamerpass/_signupform.html.erb
+++ b/app/views/gamerpass/_signupform.html.erb
@@ -1,72 +1,74 @@
 <div class="modal__formDiv">
    <%= form_tag "/user-signup", :class => "modal__form", :id => "modal__form" do %>
-   <h4>Basic Details</h4>
-    <label>
+   <div class="basic__details">
+     <h4 class="basic-detail-label">Basic Details</h4>
+      <label>
+        <input
+          class="signup-input"
+          autoFocus
+          required="true"
+          placeholder="First *"
+          name="user[first]"
+          type="text"
+        />
+      </label>
+      <label>
       <input
-        classe="signup-input"
-        autoFocus
+        class="signup-input"
         required="true"
-        placeholder="First *"
-        name="user[first]"
+        name="user[last]"
         type="text"
+        placeholder="Last *"
       />
-    </label>
-    <label>
-    <input
-      classe="signup-input"
-      required="true"
-      name="user[last]"
-      type="text"
-      placeholder="Last *"
-    />
-    </label>
-    <label>
-      <input
-        classe="signup-input"
-        name="user[email]"
-        required="true"
-        placeholder="Email *"
-       />
-    </label>
-    <label>
-      <input
-        class="signup-input full"
-        name="user[phone]"
-        placeholder="Phone"
-       />
-    </label>
-    <label>
-      <input
-        class="signup-input full"
-        name="user[location]"
-        placeholder="City, State *"
-       />
-    </label>
+      </label>
+      <label>
+        <input
+          class="signup-input"
+          name="user[email]"
+          required="true"
+          placeholder="Email *"
+         />
+      </label>
+      <label>
+        <input
+          class="signup-input full"
+          name="user[phone]"
+          placeholder="Phone"
+         />
+      </label>
+      <label>
+        <input
+          class="signup-input full"
+          name="user[location]"
+          placeholder="City, State *"
+         />
+      </label>
+    </div>
     <div class="game__selection">
-    <h4>Which games do you go to tournaments for? (Select up to 5 from any category)</h4>
+    <h4>Which games do you go to tournaments for?</h4>
     <label>
       <h5>Xbox</h5>
-      <%= select_tag("xbox[]", options_from_collection_for_select(@xbox.games, :id, :name), {:class => "js-example-basic-multiple"}) %>
+      <%= select_tag("xbox[]", options_from_collection_for_select(@xbox.games, :id, :name), {:class => "js-example-basic-multiple", :include_blank => '', :multiple => true}) %>
     </label>
     <label>
       <h5>Playstation</h5>
-      <%= select_tag("playstation[]", options_from_collection_for_select(@play.games, :id, :name), {:class => "js-example-basic-multiple"}) %>
+      <%= select_tag("playstation[]", options_from_collection_for_select(@play.games, :id, :name), {:class => "js-example-basic-multiple", :include_blank => '', :multiple => true}) %>
     </label>
     <label>
       <h5>Nintendo</h5>
-      <%= select_tag("nintendo[]", options_from_collection_for_select(@nint.games, :id, :name), {:class => "js-example-basic-multiple"}) %>
+      <%= select_tag("nintendo[]", options_from_collection_for_select(@nint.games, :id, :name), {:class => "js-example-basic-multiple", :include_blank => '', :multiple => true}) %>
     </label>
     <label>
       <h5>PC</h5>
-      <%= select_tag("pc[]", options_from_collection_for_select(@pc.games, :id, :name), {:class => "js-example-basic-multiple"}) %>
+      <%= select_tag("pc[]", options_from_collection_for_select(@pc.games, :id, :name), {:class => "js-example-basic-multiple", :include_blank => '', :multiple => true}) %>
     </label>
     <label>
       <h5>Trading Cards</h5>
-      <%= select_tag("cards[]", options_from_collection_for_select(@tcg.games, :id, :name), {:class => "js-example-basic-multiple"}) %>
+      <%= select_tag("cards[]", options_from_collection_for_select(@tcg.games, :id, :name), {:class => "js-example-basic-multiple", :include_blank => '', :multiple => true}) %>
     </label>
     <label>
       <h5>App Games</h5>
-      <%= select_tag("apps[]", options_from_collection_for_select(@appl.games, :id, :name), {:class => "js-example-basic-multiple"}) %>
+      <%= select_tag("apps[]", options_from_collection_for_select(@appl.games, :id, :name), {:class => "js-example-basic-multiple", :include_blank => '', :multiple => true}) %>
     </label>
     </div>
     <div class="button-containers signup-button-container">
