--- a/app/views/gamerpass/landing.html.erb
+++ b/app/views/gamerpass/landing.html.erb
@@ -31,7 +31,7 @@
       <div class="signup__close-x__down-arm"></div>
       <div class="signup__close-x__up-arm"></div>
     </div><!-- CLOSE X BOX -->
-    <h3>Complete this form to receive X benefit!</h3>
+    <h3 class="modal-title">Complete this form to receive X benefit!</h3>
     <%= render "signupform" %>
   </div><!-- SIGNUP MODAL -->
 
