--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,14 +25,11 @@
     <script>
       $(document).ready(function() {
           $('.js-example-basic-multiple').select2({
-            placeholder: 'Select an option',
+            placeholder: 'Select up to 10...',
             width: '95%',
             multiple: true,
-            maximumSelectionLength: 5,
+            maximumSelectionLength: 10,
             allowClear: true,
-            data: {
-
-            }
           });
       });
       </script>
