adds in deacons changes from last night 11/3/18; website looking good and ready to show

--- a/app/views/gamerpass/_signupform.html.erb
+++ b/app/views/gamerpass/_signupform.html.erb
@@ -75,7 +75,7 @@
       <button
         class="form-submit signup-btn-submit"
         type="submit"
-        >Sign Up!</button>
+        >Done!</button>
     </div>
   <% end %>
 </div>
