--- a/app/assets/stylesheets/_modal_form.css
+++ b/app/assets/stylesheets/_modal_form.css
@@ -51,6 +51,8 @@ div.game__selection{
   color: white;
   font-size: 1.1em;
   padding-left: 20px;
+  margin-top: 20px;
+  margin-bottom: 10px;
 }
 
 #modal__form > label{
