--- a/app/assets/stylesheets/_signup.css
+++ b/app/assets/stylesheets/_signup.css
@@ -2,8 +2,8 @@
 
 .signup__button {
 	position: sticky;
-	margin-top: 30px;
-	margin-bottom: 30px;
+	margin-top: -10px;
+	margin-bottom: 50px;
 	margin-left: auto;
 	margin-right: auto;
 	top: 80%;
@@ -17,7 +17,7 @@
 }
 
 .signup__button:hover {
-	background-color: #a9bee2;
+	background-color: #5a5a66;
 }
 
 .signup__backdrop {
@@ -63,14 +63,14 @@
 }
 
 .signup__promise {
-	font-size: 1.6rem;
+	font-size: 1.3rem;
 	font-weight: 400;
 	font-style: italic;
 	color: #02070d;
 }
 
 .signup__text {
-	font-size: 2.6rem;
+	font-size: 2.4rem;
 	font-weight: 900;
 	color: white;
 }
