--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -5,10 +5,12 @@
 	font-weight: 200;
 	font-size: 4rem;
 	margin: 25px;
+	padding-bottom: 20px;
 }
 
 .content__box {
-	margin: 0px 0 120px 0;
+	margin: 0px 0 0px 0;
+	padding-bottom: 120px;
 }
 
 .content__main {
