--- a/app/views/gamerpass/landing.html.erb
+++ b/app/views/gamerpass/landing.html.erb
@@ -15,9 +15,9 @@
     <%= image_tag "example_screens.png", :class => "example-screen",  :alt => "application example images"%>
   </div><!-- EXAMPLE SCREENS -->
   <div class="selling-points__box">
-    <h2 class="selling-point">Key Detail about Gamer Pass</h2>
-    <h2 class="selling-point">Another Consideration</h2>
-    <h2 class="selling-point">Big Claim Reinforcing Unique Value Proposition</h2>
+    <h2 class="selling-point">Get&nbsp;Invited to Tournaments&nbsp;in&nbsp;Your&nbsp;Area</h2>
+    <h2 class="selling-point">Discover&nbsp;New&nbsp;Gaming Job&nbsp;Opportunities</h2>
+    <h2 class="selling-point">Learn&nbsp;More&nbsp;about&nbsp;Your Favorite&nbsp;Esports&nbsp;Teams and Local&nbsp;Venues</h2>
   </div><!-- SELLING POINTS -->
 
   <div class="signup__button" id="signup-button">
@@ -31,7 +31,7 @@
       <div class="signup__close-x__down-arm"></div>
       <div class="signup__close-x__up-arm"></div>
     </div><!-- CLOSE X BOX -->
-    <h3 class="modal-title">Complete this form to receive X benefit!</h3>
+    <h3 class="modal-title">Complete this form to stay notified!</h3>
     <%= render "signupform" %>
   </div><!-- SIGNUP MODAL -->
 
