adds gif and stylizes old mock to include gif

--- a/app/views/gamerpass/landing.html.erb
+++ b/app/views/gamerpass/landing.html.erb
@@ -17,7 +17,16 @@
   <div class="selling-points__box">
     <h2 class="selling-point">Get&nbsp;Invited to Tournaments&nbsp;in&nbsp;Your&nbsp;Area</h2>
     <h2 class="selling-point">Discover&nbsp;New&nbsp;Gaming Job&nbsp;Opportunities</h2>
-    <h2 class="selling-point">Learn&nbsp;More&nbsp;about&nbsp;Your Favorite&nbsp;Esports&nbsp;Teams and Local&nbsp;Venues</h2>
+    <hr class="horizontal-rule__taper first"/>
+    <div class="outer-box">
+  		<div class="splash placeholder-box">
+        <div class="splashimg small">
+          <%= image_tag "preview_animation_etFin_sml.gif", :class => "gamer_pass_gif", :alt => "gamerpass sneakpeak gif"%>
+        </div>
+      </div>
+      <hr class="horizontal-rule__taper second"/>
+    </div>
+    <h2 class="selling-point bottom">Learn&nbsp;More&nbsp;about&nbsp;Your Favorite&nbsp;Esports&nbsp;Teams and Local&nbsp;Venues</h2>
   </div><!-- SELLING POINTS -->
 
   <div class="signup__button" id="signup-button">
