--- a/app/assets/stylesheets/_contact.css
+++ b/app/assets/stylesheets/_contact.css
@@ -5,8 +5,8 @@
 	display: flex;
 	flex-direction: column;
 
-	margin: 20px -10px -40px -10px;
-	padding: 60px 0 0 0px;
+	margin: 20px 0px;
+	padding: 70px 0 70px 0px;
 
 	text-align: center;
 	background-color: #a9bee2;
