--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -9,8 +9,8 @@
 }
 
 .content__box {
-	margin: 0px 0 0px 0;
-	padding-bottom: 120px;
+	margin: 0px;
+	padding-bottom: 0px;
 }
 
 .content__main {
@@ -33,11 +33,54 @@
 
 .selling-points__box {
 	text-align: center;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: flex-start;
+	margin-bottom: 20px;
 }
 
 .selling-point {
 	font-size: 3rem;
 	font-weight: 200;
+	max-width: 700px;
+}
+
+.selling-point.bottom{
+	margin-top: 0;
+}
+
+.outer-box {
+	display: flex;
+	flex-direction: column;
+	width: 100%;
+	justify-content: center;
+	align-items: center;
+	margin-bottom: 30px;
+	/*flex-direction: row;*/
+}
+ .placeholder-box {
+	/* background-color: slategrey; */
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	align-items: center;
+	margin: 20px 6px;
+}
+ .splash {
+ 	width: 580px;
+}
+ .form {
+	/*margin: 20px;*/
+	width: 55%;
+}
+
+.splashimg{
+	display: none;
+	background-color: #5a5a66;
+	padding: 6px;
+	border-radius: 10px;
 }
 
 #top{
@@ -46,4 +89,89 @@
 
 #About{
 	padding-top: 80px;
+}
+
+hr.horizontal-rule__taper{
+	margin: 14px 0px;
+	height: 2px;
+	width: 60%;
+	background-image: linear-gradient(to right, rgba(0,0,0,0), rgba(87, 127, 179, 1), rgba(0, 0, 0, 0));
+}
+
+hr.first{
+	margin-bottom: 20px
+}
+hr.second{
+	margin-top: 20px
+}
+@media(max-width: 1280px){
+	.outer-box{
+		padding-right: 40px;
+	}
+
+}
+@media(max-width: 1080px){
+	.outer-box{
+		flex-direction: column;
+		padding-right: 0px;
+		justify-content: center;
+		align-content: center;
+	}
+	.placeholder-box {
+	min-height: 500px;
+	margin: 20px 20px;
+	}
+	.selling-point {
+		font-size: 2.0rem;
+	}
+	.splash{width: 95%;}
+	.form{width: 95%;}
+
+}
+
+@media(max-width: 880px){
+	.selling-point {
+		padding: 10px 0px;
+		box-sizing: border-box;
+		font-size: 1.6rem;
+	}
+	.form{min-height: 0px}
+
+}
+
+@media(max-width: 680px){
+	.UVP{
+		font-size: 2.6rem;
+		padding-left: 0;
+		margin: 30px 0px;
+	}
+	.selling-point {
+		padding: 10px 0px;
+		box-sizing: border-box;
+		font-size: 1.2rem;
+	}
+	.placeholder-box{
+		margin: 10px 0px;
+	}
+	.outer-box{
+		width: 100%;
+	}
+}
+
+@media(max-width: 779px){
+	.splashimg.small{
+		display: flex;
+	}
+	.splashimg.big{
+		display: none;
+	}
+}
+
+@media(min-width: 780px){
+	.splashimg.big{
+		display: none;
+	}
+	.splashimg.small{
+		display: flex;
+	}
 }
